--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html-id": "^0.1.5",
     "react-onclickoutside": "^6.9.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
